Shorten the app name now that we've discarded the other attempts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "galerians-autosplitter-shmem"
+name = "galerians-autosplitter"
 version = "0.1.0"
 authors = ["descawed <github@descawed.com>"]
 edition = "2024"
