--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "galerians-autosplitter"
-version = "0.6.0"
+version = "1.0.0"
 authors = ["descawed <github@descawed.com>"]
 edition = "2024"
 description = "A LiveSplit-compatible autosplitter for speedrunning Galerians in supported emulators"
@@ -12,6 +12,11 @@ anyhow = "1.0.99"
 clap = { version = "4.5.45", features = ["derive"] }
 colog = "1.3.0"
 log = "0.4.27"
-memmap2 = "0.9.7"
-nix = { version = "0.30.1", features = ["process", "signal"] }
 num-traits = "0.2.19"
+sysinfo = "0.37.0"
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.175"
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.61.3", features = ["Win32_System_Memory"] }
